# MLOps

./: .dockerignore  Dockerfile  REAMDE.md  app.py  commands.sh  docker-compose.yml  mono-dockerfile.txt  pyproject.toml  test_app.py
.github/workflows/: docker-image.yml
src/: app.py
src/app/: app.py
src/data/: create_datasets.sql
src/etl/: __init__.py  elt.py
src/model/: model.py
test/: test_app.py
