[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["omarcastano <omar.castano@udea.edu.co>"]
packages = [
    { include = "src" }
]

[tool.poetry.dependencies]
python = "^3.9"
uvicorn = "0.23.2"
fastapi = "0.100.1"
nest-asyncio = "1.5.7"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
