[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["omarcastano <omar.castano@udea.edu.co>"]
packages = [
    { include = "src" }
]

[tool.poetry.dependencies]
python = "^3.9"
uvicorn = "0.23.2"
fastapi = "0.100.1"
nest-asyncio = "1.5.7"
pandas = "^2.1.0"
sqlalchemy = "^2.0.20"
pymysql = "^1.1.0"
scikit-learn = "^1.3.0"
httpx = "^0.24.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
